--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
   margin-bottom: 10px;
 }
 .main-content .content .main-description {
-  max-width: 458px;
+  max-width: 460px;
   font-size: 14px;
   line-height: 150%;
   margin-bottom: 40px;
@@ -81,6 +81,7 @@ body {
   border-radius: 8px;
   border: none;
   color: inherit;
+  font-size: 14px;
   padding: 22px 72px;
 }
 .main-content .play {
