--- a/css/style.less
+++ b/css/style.less
@@ -83,7 +83,7 @@ body{
         }
 
         .main-description{
-            max-width: 458px;
+            max-width: 460px;
             font-size: 14px;
             line-height: 150%;
             margin-bottom: 40px;
@@ -94,6 +94,7 @@ body{
             border-radius: 8px;
             border: none;
             color:inherit;
+            font-size: 14px;
             padding: 22px 72px;
         }
     }
