Сверстан слайдер и футер

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@ body {
   font-size: 14px;
   line-height: 16px;
   color: #FFFFFF;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: url('../img/background.jpg');
+  background-repeat: no-repeat;
+  background-position: top right 10%;
 }
 .container {
   max-width: 1140px;
@@ -47,6 +54,7 @@ body {
 .main-content {
   display: flex;
   align-items: center;
+  margin-bottom: 85px;
 }
 .main-content .content .genre {
   margin-bottom: 16px;
@@ -107,4 +115,75 @@ body {
   border-radius: 50%;
   left: -16px;
   top: -16px;
+}
+.swiper-container {
+  max-width: 420px;
+  margin-left: 0;
+}
+.series {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  max-width: 420px;
+}
+.series .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-right: 30px;
+  width: 164px;
+  height: 113px;
+  border-radius: 8px;
+  padding: 13px;
+}
+.series .card-subtitle {
+  font-size: 10px;
+  line-height: 12px;
+  margin: 0;
+  margin-bottom: 2px;
+}
+.series .card-title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+}
+.series .series-1 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2D2D2D 100%), url('../img/series/series1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.series .series-2 {
+  background: linear-gradient(180deg, rgba(20, 18, 24, 0.5) 0%, #2D2D2D 100%), url('../img/series/series2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.series .arrow {
+  width: 32px;
+  height: 23px;
+  border: none;
+  background-image: url('../img/arrow.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+}
+.footer {
+  background-color: #141218;
+  padding: 20px 0px;
+  margin-top: 60px;
+}
+.footer .footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .footer-content .left .copyright {
+  color: #3A383D;
+}
+.footer .footer-content .right .footer-link {
+  margin-left: 25px;
+  text-decoration: none;
+  color: #3A383D;
 }
