--- a/css/style.less
+++ b/css/style.less
@@ -28,9 +28,14 @@ body{
     background-position: top right 10%;
 }
 
+header, main{
+    flex: 1 0 auto;
+}
+
 .container{
     max-width: 1140px;
     margin: auto;
+    width: 95%;
 }
 
 .header{
@@ -59,6 +64,10 @@ body{
             text-decoration: none;
         }
     }
+}
+
+.menu-button{
+    display: none;
 }
 
 .main-content{
@@ -201,6 +210,7 @@ body{
     background-color: #141218;
     padding: 20px 0px;
     margin-top: 60px;
+    flex: 0 0 auto;
     .footer-content{
         display: flex;
         justify-content: space-between;
@@ -216,6 +226,145 @@ body{
                 text-decoration: none;
                 color: #3A383D;
             }
+        }
+    }
+}
+
+@media (max-width: 760px){
+    .play{
+        display: none;
+    }
+
+    .footer{
+        .footer-content{
+            align-items: flex-start;
+            flex-direction: column;
+            .left{
+                .copyright{
+                    display: block;
+                    margin-bottom: 8px;
+                }
+            }
+            .right{
+                .footer-link{
+                    &:first-child{
+                        margin-left: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 540px){
+    .menu-button{
+        display: block;
+        position: absolute;
+        right: 35px;
+        top: 40px;
+        width: 30px;
+        height: 2px;
+        background-color: #fff;
+        border: none;
+        &:hover{
+            cursor: pointer;
+        }
+    }
+
+    .menu-button::before{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 30px;
+        height: 2px;
+        background-color: #fff;
+        transition: transform 0.2s;
+        margin-top: -7px
+    }
+
+    .menu-button::after{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 30px;
+        height: 2px;
+        background-color:#fff;
+        transition: transform 0.2s;
+        margin-top: 7px
+    }
+
+    .menu-button-active{
+        height: 0;
+    }
+
+    .menu-button-active::before{
+        transform: rotate(45deg);
+        margin-top: 0;
+    }
+    .menu-button-active::after{
+        transform: rotate(-45deg);
+        margin-top: 0;
+    }
+
+    .header{
+        flex-direction: column;
+        position: absolute;
+        display: none;
+        right: 0;
+        top: 0;
+        background-color: #9D2929;
+        width: 250px;
+        padding-bottom: 40px;
+
+        &-active{
+            display: flex;
+        }
+
+        .logo{
+            margin-bottom: 25px;
+        }
+        .menu-list{
+            order: 2;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: auto;
+            .menu-link{
+                margin-right: 0;
+                margin-bottom: 17px;
+            }
+        }
+
+        .social{
+            order: 1;
+            margin-bottom: 22px;
+            &-link{
+                &:first-child{
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+
+    .swiper-container{
+        width: 80%;
+    }
+
+    .main-content{
+        margin-top: 196px;
+        .content{
+            .main-title{
+                font-size: 56px;
+            }
+        }
+    }
+    .series{
+        .arrow{
+            width: 50%;
         }
     }
 }
