--- a/css/style.less
+++ b/css/style.less
@@ -107,16 +107,21 @@ header, main{
         }
 
         .button{
+            display: inline-block;
             background: #9D2929;
             border-radius: 8px;
             border: none;
             color:inherit;
             font-size: 14px;
             padding: 22px 72px;
+            text-decoration: none;
         }
     }
 
     .play{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin: auto;
         background: #9D2929;
         height: 100px;
